tests/ui/derive/fail_ts_ts_rename_field.stderr
error: Foundry contract derives use serde names as the single wire-name source; `#[ts(rename = "...")]` on public field would make generated TypeScript disagree with JSON, OpenAPI, or validation metadata. Use `#[serde(rename = "...")]` or `#[serde(rename_all = "...")]` instead
 --> tests/ui/derive/fail_ts_ts_rename_field.rs:5:19
  |
5 |     #[ts(rename = "emailAddress")]
  |                   ^^^^^^^^^^^^^^
